--- a/css/index.css
+++ b/css/index.css
@@ -77,3 +77,34 @@ body {
   padding: 5px 10px;
   margin-top: 15px;
 }
+
+/* INTRO */
+.intro__text {
+  font-size: 20px;
+  margin: 25px 0 40px;
+}
+
+.intro__text span {
+  color: red;
+  font-weight: bold;
+}
+
+.intro__item {
+  padding: 0 15px 25px;
+}
+
+.intro__left,
+.intro__right {
+  float: left;
+  width: 50%;
+}
+
+.intro__item--small {
+  float: left;
+  width: 50%;
+}
+
+.intro__item img {
+  width: 100%;
+  display: block;
+}
