--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,6 @@ body {
 .carousel {
   height: 550px;
   background-image: url("../image/slider_1.jpg");
-  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -107,4 +106,39 @@ body {
 .intro__item img {
   width: 100%;
   display: block;
+}
+
+/* BANNER */
+.banner {
+  background-image: url(../image/nature.jpg);
+  height: 400px;
+  background-size: cover;
+  position: relative;
+}
+
+.banner__circle {
+  width: 300px;
+  height: 300px;
+  background-color: hsla(1, 54%, 33%, 0.8);
+  border-radius: 50%;
+  color: white;
+  text-align: center;
+  position: absolute;
+  top:15px;
+  left: 340px;
+}
+
+.banner__circle p {
+  font-size: 20px;
+  margin: 0 0 20px;
+}
+
+.banner__circle p:first-child {
+  font-size: 30px;
+  margin: 50px 0 0
+}
+
+.banner__circle p:nth-child(2) {
+  font-size: 80px;
+  margin:0;
 }
