--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@ body {
   color: white;
   text-align: center;
   position: absolute;
-  top:15px;
+  top: 15px;
   left: 340px;
 }
 
@@ -135,10 +135,39 @@ body {
 
 .banner__circle p:first-child {
   font-size: 30px;
-  margin: 50px 0 0
+  margin: 50px 0 0;
 }
 
 .banner__circle p:nth-child(2) {
   font-size: 80px;
-  margin:0;
+  margin: 0;
+}
+
+/* SERVICES */
+.services {
+  margin: 30px 0 10px;
+}
+
+.services__content {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+}
+
+.services__item {
+  float: left;
+  width: 33.33%;
+  padding: 0 10px;
+}
+
+.services__item i {
+  font-size: 40px;
+}
+
+.services__item h2 {
+  margin: 10px 0;
+}
+
+.services__item p {
+  margin: 0;
 }
